section-05/bookinfo-details-v2.yaml
##################################################################################################
# Details service v2
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v2
  labels:
    app: details
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v2
  template:
    metadata:
      labels:
        app: details
        version: v2
    spec:
      containers:
      - name: details
        image: istio/examples-bookinfo-details-v2:1.12.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
